--- a/src/styles.css
+++ b/src/styles.css
@@ -559,68 +559,129 @@ video {
   margin-right: auto;
 }
 
+.mx-0 {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+.mx-\[95\] {
+  margin-left: 95;
+  margin-right: 95;
+}
+
+.mx-\[95\%\] {
+  margin-left: 95%;
+  margin-right: 95%;
+}
+
+.mx-\[5\] {
+  margin-left: 5;
+  margin-right: 5;
+}
+
+.mx-\[5\%\] {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
 
-.inline-block {
-  display: inline-block;
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
+.mb-16 {
+  margin-bottom: 4rem;
+}
+
+.flex {
+  display: flex;
 }
 
 .table {
   display: table;
 }
 
-.h-4 {
-  height: 1rem;
+.grid {
+  display: grid;
 }
 
-.w-4 {
-  width: 1rem;
+.h-dvh {
+  height: 100dvh;
 }
 
-.max-w-\[min\(90\%\2c 1200px\)\] {
-  max-width: min(90%,1200px);
+.h-1 {
+  height: 0.25rem;
 }
 
-.max-w-\[min\(90\%\2c _1200px\)\] {
-  max-width: min(90%, 1200px);
+.min-h-dvh {
+  min-height: 100dvh;
 }
 
-.max-w-\[min\(95\%\2c _1200px\)\] {
-  max-width: min(95%, 1200px);
+.w-80 {
+  width: 20rem;
 }
 
-.max-w-\[min\(95\%\2c 1200px\)\] {
-  max-width: min(95%,1200px);
+.w-96 {
+  width: 24rem;
 }
 
-.max-w-\[min\(95\%\2c 1280px\)\] {
-  max-width: min(95%,1280px);
+.w-\[80\%\] {
+  width: 80%;
 }
 
-.max-w-\[min\(95\%\2c 1281px\)\] {
-  max-width: min(95%,1281px);
+.w-\[95\%\] {
+  width: 95%;
 }
 
-.max-w-\[min\(95\%\2c 1550px\)\] {
-  max-width: min(95%,1550px);
+.w-\[\%\] {
+  width: %;
 }
 
-.max-w-\[min\(95\%\2c 132px\)\] {
-  max-width: min(95%,132px);
+.w-\[50\%\] {
+  width: 50%;
 }
 
-.max-w-\[min\(95\%\2c 128px\)\] {
-  max-width: min(95%,128px);
+.w-\[60\%\] {
+  width: 60%;
+}
+
+.w-\[90\%\] {
+  width: 90%;
 }
 
 .max-w-\[95\%\] {
   max-width: 95%;
 }
 
-.border-b-2 {
-  border-bottom-width: 2px;
+.max-w-60 {
+  max-width: 15rem;
+}
+
+.border-collapse {
+  border-collapse: collapse;
+}
+
+.grid-rows-\[auto_1fr_auto\] {
+  grid-template-rows: auto 1fr auto;
+}
+
+.place-items-center {
+  place-items: center;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .border-b-\[1px\] {
@@ -631,60 +692,18 @@ video {
   border-style: solid;
 }
 
-.border-b-black {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
-}
-
-.border-b-\[1px_solid_\#E5E7EB\] {
-  border-bottom-color: 1px solid #E5E7EB;
-}
-
-.bg-\[\#E5E7EB\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
-}
-
 .bg-\[\#F8FAFC\] {
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity, 1));
 }
 
-.bg-\[url\(resources\/bg-pattern\.png\)\] {
-  background-image: url(resources/bg-pattern.png);
-}
-
-.bg-\[url\(\/resources\/bg-pattern\.png\)\] {
-  background-image: url(/resources/bg-pattern.png);
+.bg-\[\#121826\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(18 24 38 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[url\(\.\.\/resources\/bg-pattern\.png\)\] {
   background-image: url(../resources/bg-pattern.png);
-}
-
-.bg-\[url\(\.\/resources\/bg-pattern\.png\)\] {
-  background-image: url(./resources/bg-pattern.png);
-}
-
-.bg-\[url\(\.\.\/resources\/down_arrow-1\.svg\)\] {
-  background-image: url(../resources/down_arrow-1.svg);
-}
-
-.bg-contain {
-  background-size: contain;
-}
-
-.bg-no-repeat {
-  background-repeat: no-repeat;
-}
-
-.p-8 {
-  padding: 2rem;
-}
-
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
 }
 
 .py-10 {
@@ -692,9 +711,8 @@ video {
   padding-bottom: 2.5rem;
 }
 
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .text-center {
@@ -714,13 +732,20 @@ video {
   line-height: 1.5rem;
 }
 
+.text-\[64px\] {
+  font-size: 64px;
+}
+
 .font-bold {
   font-weight: 700;
 }
 
-.text-\[\#263FA9\] {
-  --tw-text-opacity: 1;
-  color: rgb(38 63 169 / var(--tw-text-opacity, 1));
+.font-normal {
+  font-weight: 400;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .text-\[\#121826\] {
@@ -728,16 +753,37 @@ video {
   color: rgb(18 24 38 / var(--tw-text-opacity, 1));
 }
 
-.text-\[\#E5E7EB\] {
+.text-\[\#263FA9\] {
   --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity, 1));
-}
-
-.text-\[\#4D556233\] {
-  color: #4D556233;
+  color: rgb(38 63 169 / var(--tw-text-opacity, 1));
 }
 
 .text-\[\#4D5562\] {
   --tw-text-opacity: 1;
   color: rgb(77 85 98 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#FFFFFF\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.\[\&\>td\]\:max-w-80>td {
+  max-width: 20rem;
+}
+
+.\[\&\>th\]\:max-w-80>th {
+  max-width: 20rem;
+}
+
+.\[\&\>th\]\:pb-4>th {
+  padding-bottom: 1rem;
+}
+
+.\[\&\>th\]\:pb-8>th {
+  padding-bottom: 2rem;
+}
+
+.\[\&\>tr\>th\]\:pb-4>tr>th {
+  padding-bottom: 1rem;
 }
