--- a/src/styles.css
+++ b/src/styles.css
@@ -559,45 +559,20 @@ video {
   margin-right: auto;
 }
 
-.mx-0 {
-  margin-left: 0px;
-  margin-right: 0px;
-}
-
-.mx-\[95\] {
-  margin-left: 95;
-  margin-right: 95;
-}
-
-.mx-\[95\%\] {
-  margin-left: 95%;
-  margin-right: 95%;
-}
-
-.mx-\[5\] {
-  margin-left: 5;
-  margin-right: 5;
-}
-
-.mx-\[5\%\] {
-  margin-left: 5%;
-  margin-right: 5%;
-}
-
 .mb-2 {
   margin-bottom: 0.5rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 
-.mb-12 {
-  margin-bottom: 3rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
-.mb-16 {
-  margin-bottom: 4rem;
+.inline-block {
+  display: inline-block;
 }
 
 .flex {
@@ -608,80 +583,55 @@ video {
   display: table;
 }
 
-.grid {
-  display: grid;
-}
-
-.h-dvh {
-  height: 100dvh;
-}
-
-.h-1 {
-  height: 0.25rem;
-}
-
-.min-h-dvh {
-  min-height: 100dvh;
-}
-
-.w-80 {
-  width: 20rem;
-}
-
-.w-96 {
-  width: 24rem;
-}
-
-.w-\[80\%\] {
-  width: 80%;
-}
-
-.w-\[95\%\] {
-  width: 95%;
-}
-
-.w-\[\%\] {
-  width: %;
-}
-
-.w-\[50\%\] {
-  width: 50%;
-}
-
-.w-\[60\%\] {
-  width: 60%;
+.w-\[20\%\] {
+  width: 20%;
 }
 
 .w-\[90\%\] {
   width: 90%;
 }
 
-.max-w-\[95\%\] {
-  max-width: 95%;
-}
-
-.max-w-60 {
-  max-width: 15rem;
+.w-full {
+  width: 100%;
 }
 
 .border-collapse {
   border-collapse: collapse;
 }
 
-.grid-rows-\[auto_1fr_auto\] {
-  grid-template-rows: auto 1fr auto;
-}
-
-.place-items-center {
-  place-items: center;
-}
-
-.items-center {
-  align-items: center;
-}
-
 .justify-center {
   justify-content: center;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
+.rounded-b-2xl {
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+
+.rounded-l-2xl {
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+
+.rounded-t-2xl {
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+
+.rounded-bl-2xl {
+  border-bottom-left-radius: 1rem;
+}
+
+.rounded-tl-2xl {
+  border-top-left-radius: 1rem;
 }
 
 .border-b-\[1px\] {
@@ -692,9 +642,14 @@ video {
   border-style: solid;
 }
 
-.bg-\[\#F8FAFC\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 250 252 / var(--tw-bg-opacity, 1));
+.border-b-\[\#4D5562\] {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(77 85 98 / var(--tw-border-opacity, 1));
+}
+
+.border-b-\[\#F8FAFC\] {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(248 250 252 / var(--tw-border-opacity, 1));
 }
 
 .bg-\[\#121826\] {
@@ -702,8 +657,48 @@ video {
   background-color: rgb(18 24 38 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[\#263FA9\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(38 63 169 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#7C4F1E\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(124 79 30 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#F8FAFC\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 250 252 / var(--tw-bg-opacity, 1));
+}
+
 .bg-\[url\(\.\.\/resources\/bg-pattern\.png\)\] {
   background-image: url(../resources/bg-pattern.png);
+}
+
+.bg-\[url\(\.\.\/resources\/check-1\.svg\)\] {
+  background-image: url(../resources/check-1.svg);
+}
+
+.bg-\[url\(\.\.\/resources\/check\.svg\)\] {
+  background-image: url(../resources/check.svg);
+}
+
+.bg-center {
+  background-position: center;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
+
+.p-4 {
+  padding: 1rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .py-10 {
@@ -711,8 +706,12 @@ video {
   padding-bottom: 2.5rem;
 }
 
-.pb-4 {
-  padding-bottom: 1rem;
+.pl-4 {
+  padding-left: 1rem;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-center {
@@ -727,13 +726,13 @@ video {
   font-size: 32px;
 }
 
+.text-\[64px\] {
+  font-size: 64px;
+}
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
-}
-
-.text-\[64px\] {
-  font-size: 64px;
 }
 
 .font-bold {
@@ -763,20 +762,45 @@ video {
   color: rgb(77 85 98 / var(--tw-text-opacity, 1));
 }
 
-.text-\[\#FFFFFF\] {
+.text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.\[\&\>td\]\:max-w-80>td {
-  max-width: 20rem;
+@media not all and (min-width: 640px) {
+  .max-sm\:hidden {
+    display: none;
+  }
+
+  .max-sm\:w-\[95\%\] {
+    width: 95%;
+  }
 }
 
-.\[\&\>th\]\:max-w-80>th {
-  max-width: 20rem;
+@media (min-width: 640px) {
+  .sm\:hidden {
+    display: none;
+  }
 }
 
-.\[\&\>th\]\:pb-4>th {
+@media (min-width: 1024px) {
+  .lg\:hidden {
+    display: none;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:visible {
+    visibility: visible;
+  }
+
+  .xl\:table-cell {
+    display: table-cell;
+  }
+}
+
+.\[\&\>th\]\:py-4>th {
+  padding-top: 1rem;
   padding-bottom: 1rem;
 }
 
@@ -784,6 +808,15 @@ video {
   padding-bottom: 2rem;
 }
 
-.\[\&\>tr\>th\]\:pb-4>tr>th {
-  padding-bottom: 1rem;
+.\[\&\>tr\>td\]\:border-b>tr>td {
+  border-bottom-width: 1px;
+}
+
+.\[\&\>tr\>td\]\:border-solid>tr>td {
+  border-style: solid;
+}
+
+.\[\&\>tr\>td\]\:py-2>tr>td {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
