--- a/src/styles.css
+++ b/src/styles.css
@@ -554,6 +554,47 @@ video {
   display: none;
 }
 
+@media not all and (min-width: 640px) {
+  .media-queries {
+    display: none;
+  }
+}
+
+@media (min-width: 640px) {
+  .media-queries {
+    display: none;
+  }
+}
+
+@media (min-width: 1024px) {
+  .media-queries {
+    display: none;
+  }
+}
+
+@media (min-width: 1280px) {
+  .media-queries {
+    display: table-cell;
+  }
+}
+
+.textColor-bgColor-borderColor {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(77 85 98 / var(--tw-border-opacity, 1));
+  --tw-bg-opacity: 1;
+  background-color: rgb(18 24 38 / var(--tw-bg-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.table-column-names {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 250 252 / var(--tw-bg-opacity, 1));
+  padding-left: 1rem;
+  text-align: left;
+  font-weight: 600;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -581,10 +622,6 @@ video {
 
 .table {
   display: table;
-}
-
-.w-\[20\%\] {
-  width: 20%;
 }
 
 .w-\[90\%\] {
@@ -640,11 +677,6 @@ video {
 
 .border-solid {
   border-style: solid;
-}
-
-.border-b-\[\#4D5562\] {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(77 85 98 / var(--tw-border-opacity, 1));
 }
 
 .border-b-\[\#F8FAFC\] {
@@ -726,10 +758,6 @@ video {
   font-size: 32px;
 }
 
-.text-\[64px\] {
-  font-size: 64px;
-}
-
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -768,35 +796,13 @@ video {
 }
 
 @media not all and (min-width: 640px) {
-  .max-sm\:hidden {
-    display: none;
-  }
-
   .max-sm\:w-\[95\%\] {
     width: 95%;
   }
 }
 
-@media (min-width: 640px) {
-  .sm\:hidden {
-    display: none;
-  }
-}
-
-@media (min-width: 1024px) {
-  .lg\:hidden {
-    display: none;
-  }
-}
-
-@media (min-width: 1280px) {
-  .xl\:visible {
-    visibility: visible;
-  }
-
-  .xl\:table-cell {
-    display: table-cell;
-  }
+.\[\&\>th\]\:w-\[20\%\]>th {
+  width: 20%;
 }
 
 .\[\&\>th\]\:py-4>th {
@@ -806,6 +812,10 @@ video {
 
 .\[\&\>th\]\:pb-8>th {
   padding-bottom: 2rem;
+}
+
+.\[\&\>th\]\:text-\[64px\]>th {
+  font-size: 64px;
 }
 
 .\[\&\>tr\>td\]\:border-b>tr>td {
